[tool.poetry]
name = "dls"
version = "0.1.0"
description = ""
authors = ["tobias2408 <tobiaspo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
sqlalchemy = "1.3.12"
uvicorn = "^0.21.1"
fastapi-utils = "^0.2.1"
mysql = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
